fix(navMenu): fix hover for subMenu items on mobile devices

--- a/src/components/Header/components/Nav/SubMenu/subMenu.module.scss
+++ b/src/components/Header/components/Nav/SubMenu/subMenu.module.scss
@@ -110,8 +110,9 @@
     background: rgba($textColor2 ,.5);
   }
 
-  &:hover, &.isActive {
+  &.isActive {
     transform: translateX(6px);
+
     &::after {
       bottom: 0;
       height: 100%;
@@ -120,6 +121,15 @@
 
   @include breakpoint(lg) {
     max-width: 400px;
+
+    &:hover {
+      transform: translateX(6px);
+
+      &::after {
+        bottom: 0;
+        height: 100%;
+      }
+    }
   }
 }
 
